# med_website_drf

./: README.md  pyproject.toml
config/: settings.py  urls.py
med_drf/: admin.py  apps.py  models.py  permissions.py  routers.py  serializers.py  views.py
med_drf/migrations/: 0001_initial.py
